[workspace]
members = ["libwifi", "libwifi_macros"]
exclude = ["examples/capture_example"]
resolver = "2"

[workspace.package]
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/libwifi"
repository = "https://github.com/nukesor/libwifi"
documentation = "https://docs.rs/libwifi/"
license = "MIT"
edition = "2021"
rust-version = "1.62"

[profile.release]
lto = "thin"
codegen-units = 1
