[workspace]
exclude = ["examples/capture_example", "fuzz"]
members = ["libwifi", "libwifi_macros"]
resolver = "3"

[workspace.package]
authors = ["Arne Beer <contact@arne.beer>"]
documentation = "https://docs.rs/libwifi/"
edition = "2024"
homepage = "https://github.com/nukesor/libwifi"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nukesor/libwifi"

[profile.release]
codegen-units = 1
lto = "thin"
