[package]
name = "libwifi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.libwifi]
path = "../libwifi"

[[bin]]
bench = false
doc = false
name = "parse_frame"
path = "fuzz_targets/parse_frame.rs"
test = false
