[package]
name = "libwifi"
version = "0.4.1"
description = "A library for parsing IEEE 802.11 frames and handling wifi interfaces."
keywords = ["802_11", "frame", "parser", "wifi"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bench]]
harness = false
name = "parse_beacon"

[[bench]]
harness = false
name = "parse_data"

[dependencies]
byteorder = "1.5.0"
crc = "3.2.1"
enum_dispatch = "0.3"
libwifi_macros = { version = "0.0.2", path = "../libwifi_macros" }
log = "0.4"
nom = "7"
rand = "0.8"
strum_macros = "0.26"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
doc-comment = "0.3"
rand = "0.8"
