[package]
name = "libwifi_macros"
version = "0.0.2"
description = "A library providing macros for the libwifi crate."
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2018"

homepage = "https://github.com/nukesor/libwifi_macros"
repository = "https://github.com/nukesor/libwifi_macros"
documentation = "https://docs.rs/libwifi_macros/"
license = "MIT"
keywords = ["libwifi", "macros"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1"
proc-macro2 = "1"
quote = "1"
