[package]
name = "libwifi_macros"
description = "A library providing macros for the libwifi crate."
version = "0.0.2"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
