[package]
name = "capture_example"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2021"

[dependencies]
anyhow = "1"
better-panic = "0.3"
clap = { version = "4", features = ["derive", "cargo"] }
libwifi = { path = "../../libwifi" }
pcap = { version = "1", features = ['capture-stream'] }
radiotap = "1.3"
